--- a/styles.css
+++ b/styles.css
@@ -39,15 +39,21 @@ body{
 .wrapper{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border: 2px solid red;
     height: 72vh;
+    text-transform: uppercase;
 }
 
 h1{
     font-size: 4rem;
-    color: var(--hover);
+    color: var(--font);
+}
+
+h2{
+    font-size: 6rem;
+    color: var(--font);
 }
 
 /*DROPDOWN*/
