--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,400&display=swap');
 
 *{
     padding: 0;
@@ -10,6 +9,7 @@
 :root{
     font-size: 62.5%;
     font-family: 'Exo 2', sans-serif;
+    font-family: 'DM Sans', sans-serif;
     --font: #333A41;
     --background: #f2f2f2;
     --menu: #EBF2FD;
@@ -36,6 +36,9 @@ body{
     background-size: cover;
 }
 
+
+
+/*MAIN*/
 .wrapper{
     display: flex;
     flex-direction: column;
@@ -48,13 +51,16 @@ body{
 
 h1{
     font-size: 4rem;
+    font-weight: lighter;
     color: var(--font);
 }
 
 h2{
-    font-size: 6rem;
+    font-size: 5rem;
     color: var(--font);
 }
+
+
 
 /*DROPDOWN*/
 .dropdown {
@@ -103,6 +109,7 @@ a:hover{
 .dropdown:hover .dropdown-list {
     display: block;
 }
+
 
 
 /*MENU*/
