--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ a:hover{
     position: fixed;
 }
 
-.menu-list, .home{
+.menu-list{
     color: var(--font);
     font-size: 2rem;
     text-transform: uppercase;
@@ -131,14 +131,14 @@ a:hover{
     justify-content: space-between;
 }
 
-.menu-list, .home a:link{
+.menu-list a:link{
     color: var(--font);
     text-decoration: none;
 }
-.menu-list, .home a:visited{
+.menu-list a:visited{
     color: var(--font);
 }
-.menu-list, .home a:hover{
+.menu-list a:hover{
     font-weight: lighter;
     font-style: normal;
 }
@@ -181,4 +181,7 @@ a:hover{
     box-shadow: 15px 15px 20px var(--font);
     backdrop-filter: blur(2px);
     padding: 20px;
+    color: var(--font);
+    font-size: 2rem;
+    text-transform: uppercase;
 }
