--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ a:hover{
 
 
 
-/*WEBDEV*/
+/*WEBDEV / CONTACT*/
 
 .header-box{
     padding: 10px 0 0 10px;
@@ -166,6 +166,39 @@ a:hover{
     border-radius: 20px;
     box-shadow: 10px 10px 10px var(--font);
     margin: 15px;
+}
+
+.contact-wrapper{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    border-radius: 20px;
+    border: 2px solid var(--font);
+    box-shadow: 15px 15px 20px var(--font);
+    backdrop-filter: blur(2px);
+    height: auto;
+}
+
+.contact-wrapper p, ul{
+    margin: 20px;
+    line-height: 1.5;
+    font-size: 2rem;
+    margin: 20px;
+}
+
+.contact-wrapper a:link{
+    color: var(--font);
+    text-decoration: none;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    line-height: 1.5;
+}
+.contact-wrapper a:visited{
+    color: var(--clicked);
+}
+.contact-wrapper a:hover{
+    color: var(--hover);
+    font-style: normal;
 }
 
 .home{
