--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ a:hover{
 
 
 
-/*WEBDEV / CONTACT*/
+/*WRAPPERS*/
 
 .header-box{
     padding: 10px 0 0 10px;
@@ -158,7 +158,7 @@ a:hover{
     border-radius: 20px;
     border: 2px solid var(--font);
     box-shadow: 15px 15px 20px var(--font);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(10px);
 }
 
 .content-wrapper img{
@@ -175,7 +175,7 @@ a:hover{
     border-radius: 20px;
     border: 2px solid var(--font);
     box-shadow: 15px 15px 20px var(--font);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(10px);
     height: auto;
 }
 
@@ -208,7 +208,7 @@ a:hover{
     border-radius: 20px;
     border: 2px solid var(--font);
     box-shadow: 15px 15px 20px var(--font);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(10px);
     height: auto;
 }
 
