--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,7 @@
     font-family: 'Exo 2', sans-serif;
     font-family: 'DM Sans', sans-serif;
     --font: #333A41;
-    --background: #f2f2f2;
-    --menu: #EBF2FD;
+    --white: #EBF2FD;
     --clicked: rgb(153, 221, 17);
     --hover: #cf1e5c;
 }
@@ -76,7 +75,7 @@ h2{
     width: 45px;
     height: 5px;
     margin: 6px;
-    background-color: var(--background);
+    background-color: var(--white);
 }
 
 li{
@@ -84,7 +83,7 @@ li{
 }
 
 a:link{
-    color: var(--menu);
+    color: var(--white);
     text-decoration: none;
 }
 a:visited{
