mediaQ change, comment in code

--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,9 @@ a:hover{
 
 
 /*WRAPPERS*/
+.content{
+    margin-bottom: 300px;
+}
 .header-box{
     padding: 10px 0 0 10px;
 }
@@ -252,7 +255,7 @@ figcaption{
 
 
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 550px) {/*1280*/
     .index-anchor {
         padding: 3px;
         background-color: #EBF2FD;
