--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ a:hover{
     flex-direction: column;
     justify-content: space-evenly;
     margin: 30px;
-    padding: 15px;
+    padding: 35px 0 15px 0;
     border-radius: 20px;
     border: 2px solid var(--font);
     box-shadow: 15px 15px 20px var(--font);
