added text align to wrapper

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,8 @@ a:hover{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
     margin: 30px;
     padding: 35px 0 15px 0;
     border-radius: 20px;
