--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     --black: #333A41;
     --icon: #333a41de;
     --white: #ebf2fdd2;
+    --frost: #e1e5ece7;
     --red: rgb(221, 17, 17);
     --violet: #5c1ecf;
 }
